sh nearly complete